learned flex inside grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>CSS flexbox inside CSS grid</h1>
+    </header>
+    <div class="grid_container">
+
+        <div class="grid_item flex_container">
+            <div class="flex_item flex_item-1">flex item 1</div>
+            <div class="flex_item flex_item-2">flex item 2</div>
+            <div class="flex_item flex_item-3">flex item 3</div>
+        </div>
+
+        <div class="grid_item">Grid Item 2</div>
+        <div class="grid_item">Grid Item 3</div>
+        <div class="grid_item">Grid Item 4</div>
+    </div>
 </body>
 </html>
